--- a/index.html
+++ b/index.html
@@ -1,18 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cy - Portfolio</title>
-
-    <link rel="stylesheet" href="style.css">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Cy - Portfolio</title>
+   <link rel="stylesheet" href="style.css">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+   <style>
+      body {
+      margin: 0;
+      background: #FDFCF5;
+      }
+      /* header */
+      .heading {
+      background: #9E4244;
+      height: 220px;
+      }
+      .content-wrapper {
+      display: flex;
+      justify-content: center;
+      }
+      /* white content boc */
+      .content-box {
+      background: white;
+      max-width: 900px;
+      width: 100%;
+      padding: 70px 80px;
+      margin-top: -120px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.1);
+      }
+      .divider {
+      color: #740A03;
+      margin: 20px auto 30px;
+      border-top: 2px solid #000;
+      }
+      /* ---------------------------------------------- */
+      .title {
+      font-family: Tahoma, Geneva, sans-serif;
+      font-size: 38px;
+      font-weight: 700;
+      line-height: 1.25;
+      color: #2c2c2c;
+      margin-bottom: 16px;
+      }
+      .meta {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 24px;
+      }
+      .name,
+      .date {
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 15px;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      color: #2c2c2c;
+      margin: 0;
+      font-weight: 400; /*400 hindi bold*/
+      }
+      .title2 {
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 20px;
+      color: #37353E;
+      font-weight: 550;
+      margin: 40px 0 12px;
+      }
+      .bio {
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 15px;
+      color: #37353E;
+      line-height: 1.7;
+      margin: 0 0 24px;
+      text-align: justify;
+      }
+      b {
+      background-color: #f4cccc; /* soft pink/red background */
+      color: #740A03;            /* matches header deep red */
+      padding: 2px 4px;
+      border-radius: 3px;
+      font-weight: 600;
+      }
+   </style>
 </head>
+
+
 <body>
 
     <header>
@@ -52,4 +127,5 @@
     </footer>
 
 </body>
+
 </html>
