--- a/index.html
+++ b/index.html
@@ -1,131 +1,267 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Cy - Portfolio</title>
-   <link rel="stylesheet" href="style.css">
-   <link rel="preconnect" href="https://fonts.googleapis.com">
-   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-   <style>
-      body {
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Cy – Portfolio</title>
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+  <style>
+    /* ---------- RESET ---------- */
+    * {
+      box-sizing: border-box;
       margin: 0;
+      padding: 0;
+    }
+
+    body {
+      font-family: 'Lato', Arial, sans-serif;
       background: #FDFCF5;
-      }
-      /* header */
-      .heading {
+      color: #2c2c2c;
+    }
+
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+
+    /* ---------- HEADER ---------- */
+    header {
       background: #9E4244;
-      height: 220px;
-      }
-      .content-wrapper {
+      padding: 20px 40px;
+    }
+
+    nav {
+      display: flex;
+      justify-content: flex-end;
+      gap: 30px;
+    }
+
+    nav a {
+      color: white;
+      font-size: 15px;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
+    }
+
+    /* ---------- HERO ---------- */
+    .hero {
+      max-width: 1100px;
+      margin: 80px auto;
+      padding: 0 40px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 60px;
+    }
+
+    .hero-text {
+      max-width: 500px;
+    }
+
+    .hero-text h1 {
+      font-family: 'Playfair Display', serif;
+      font-size: 48px;
+      margin-bottom: 10px;
+    }
+
+    .subtitle {
+      font-size: 18px;
+      color: #555;
+      margin-bottom: 30px;
+    }
+
+    .button {
+      display: inline-block;
+      padding: 12px 28px;
+      background: #9E4244;
+      color: white;
+      font-size: 14px;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      border-radius: 4px;
+    }
+
+    .button:hover {
+      background: #7e3436;
+    }
+
+    /* ---------- HERO IMAGE ---------- */
+    .hero-image-container {
+      position: relative;
+      width: 300px;
+    }
+
+    .red-block {
+      position: absolute;
+      top: -20px;
+      left: -20px;
+      width: 100%;
+      height: 100%;
+      background: #9E4244;
+      z-index: 0;
+    }
+
+    .profile-img {
+      position: relative;
+      width: 100%;
+      display: block;
+      z-index: 1;
+    }
+
+    /* ---------- CONTENT BOX ---------- */
+    .content-wrapper {
       display: flex;
       justify-content: center;
-      }
-      /* white content boc */
-      .content-box {
+      margin-bottom: 100px;
+    }
+
+    .content-box {
       background: white;
       max-width: 900px;
       width: 100%;
       padding: 70px 80px;
-      margin-top: -120px;
       box-shadow: 0 20px 40px rgba(0,0,0,0.1);
-      }
-      .divider {
-      color: #740A03;
-      margin: 20px auto 30px;
-      border-top: 2px solid #000;
-      }
-      /* ---------------------------------------------- */
-      .title {
-      font-family: Tahoma, Geneva, sans-serif;
+    }
+
+    .title {
+      font-family: 'Playfair Display', serif;
       font-size: 38px;
-      font-weight: 700;
-      line-height: 1.25;
-      color: #2c2c2c;
       margin-bottom: 16px;
-      }
-      .meta {
+    }
+
+    .meta {
       display: flex;
       justify-content: space-between;
-      align-items: center;
-      margin-bottom: 24px;
-      }
-      .name,
-      .date {
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 15px;
-      letter-spacing: 1px;
+      margin-bottom: 30px;
+      font-size: 14px;
       text-transform: uppercase;
-      color: #2c2c2c;
-      margin: 0;
-      font-weight: 400; /*400 hindi bold*/
-      }
-      .title2 {
-      font-family: Arial, Helvetica, sans-serif;
+      letter-spacing: 1px;
+    }
+
+    .divider {
+      border-top: 2px solid #740A03;
+      margin-bottom: 30px;
+    }
+
+    .title2 {
       font-size: 20px;
-      color: #37353E;
-      font-weight: 550;
+      font-weight: 600;
       margin: 40px 0 12px;
-      }
-      .bio {
-      font-family: Arial, Helvetica, sans-serif;
+    }
+
+    .bio {
       font-size: 15px;
-      color: #37353E;
       line-height: 1.7;
-      margin: 0 0 24px;
       text-align: justify;
-      }
-      b {
-      background-color: #f4cccc; /* soft pink/red background */
-      color: #740A03;            /* matches header deep red */
+    }
+
+    b {
+      background-color: #f4cccc;
+      color: #740A03;
       padding: 2px 4px;
       border-radius: 3px;
       font-weight: 600;
-      }
-   </style>
-</head>
+    }
 
+    /* ---------- FOOTER ---------- */
+    footer {
+      background: #9E4244;
+      color: white;
+      text-align: center;
+      padding: 40px 20px;
+    }
+
+    .social-links {
+      margin-bottom: 15px;
+    }
+
+    .social-links a {
+      color: white;
+      margin: 0 10px;
+      font-size: 18px;
+    }
+
+    .social-links a:hover {
+      opacity: 0.8;
+    }
+  </style>
+</head>
 
 <body>
 
-    <header>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">About me</a>
-            <a href="#">Projects</a>
-            <a href="#">Contacts</a>
-        </nav>
-    </header>
+  <!-- HEADER -->
+  <header>
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">About Me</a>
+      <a href="#">Projects</a>
+      <a href="#">Contact</a>
+    </nav>
+  </header>
 
-    <main class="hero">
-        <div class="hero-text">
-            <h1>Hi, I’m Cy!</h1>
-            <p class="subtitle">welcome . . .</p>
-            <a href="#" class="button">Learn More</a>
-        </div>
+  <!-- HERO -->
+  <main class="hero">
+    <div class="hero-text">
+      <h1>Hi, I’m Cy!</h1>
+      <p class="subtitle">Welcome to my portfolio.</p>
+      <a href="#" class="button">Learn More</a>
+    </div>
 
-        <div class="hero-image-container">
-            <div class="red-block"></div>
-            <img
-                src="https://miro.medium.com/v2/resize:fit:720/format:webp/0*kST_sr4ZH3Y279LI"
-                alt="Portrait of Cy"
-                class="profile-img"
-            >
-        </div>
-    </main>
+    <div class="hero-image-container">
+      <div class="red-block"></div>
+      <img
+        src="https://miro.medium.com/v2/resize:fit:720/format:webp/0*kST_sr4ZH3Y279LI"
+        alt="Portrait of Cy"
+        class="profile-img"
+      />
+    </div>
+  </main>
 
-    <footer>
-        <div class="social-links">
-            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-            <a href="#"><i class="fa-brands fa-github"></i></a>
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-regular fa-envelope"></i></a>
-        </div>
-        <p>&copy; Cyril Libuton</p>
-    </footer>
+  <!-- CONTENT -->
+  <section class="content-wrapper">
+    <div class="content-box">
+      <h2 class="title">About Me</h2>
+
+      <div class="meta">
+        <span>Cyril Libuton</span>
+        <span>Portfolio</span>
+      </div>
+
+      <div class="divider"></div>
+
+      <h3 class="title2">Who I Am</h3>
+      <p class="bio">
+        I’m a creative individual passionate about design, technology, and storytelling.
+        I enjoy building clean, thoughtful interfaces and continuously learning new tools.
+        My goal is to create work that feels both <b>functional</b> and <b>human</b>.
+      </p>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="social-links">
+      <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+      <a href="#"><i class="fa-brands fa-github"></i></a>
+      <a href="#"><i class="fa-brands fa-instagram"></i></a>
+      <a href="#"><i class="fa-regular fa-envelope"></i></a>
+    </div>
+    <p>&copy; Cyril Libuton</p>
+  </footer>
 
 </body>
-
 </html>
+
+
