--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <nav>
             <a href="#">Home</a>
             <a href="#">About me</a>
-            <a href="#">Projects</a>
+            <a href="projects.html">Projects</a>
             <a href="#">Contacts</a>
         </nav>
     </header>
@@ -190,6 +190,7 @@
 </html>
 
 </html>
+
 
 
 
