--- a/blog2.html
+++ b/blog2.html
@@ -112,13 +112,13 @@
 
       <h4 class="title2">First Scroll of the Day</h4>
       <p class="bio">
-        I know I’m not the only one, but I swear the <b>first thing I do when I wake up</b> is open the TikTok app. No coffee, no breakfast, just TikTok. It’s like a <b>muscle memory</b> to automatically open the app the moment I wake up. I can’t even get through the night without scrolling before I sleep. It gets so addicting that I end up <b>staying awake all night</b>, completely sacrificing sleep just for a few more scrolls.
+        I know I’m not the only one, but I swear the <b>first thing I do when I wake up</b> is open the TikTok app. No coffee, no breakfast, just TikTok. It’s like a <b>muscle memory</b> to automatically open the app the moment I wake up. I can’t even get through the night without scrolling before I sleep. It gets so addicting that I end up staying awake all night, completely <b>sacrificing sleep</b> just for a few more scrolls.
       </p>
 
       <h5 class="title2">Addicted & Annoyed</h5>
       <p class="bio">
-        Thinking about it now, I honestly can’t believe I’m still this attached to the app. Back in the day, I had this weird <b>love-hate relationship</b> with the app right after it replaced Musical.ly. Remember Musical.ly? the app that basically became TikTok overnight. According to the rumors, <b>TikTok bought Musical.ly</b> and rebranded it, and naturally, a lot of Musical.ly users were offended. I get it, change is annoying when you love something the way it was. But over time, people just accepted it. Like, did they really have a choice? Not really. The important thing is <b>TikTok remained fun</b>, so fun that some of us <b>sacrifice sleep</b> just to scroll for a few minutes, which then turns into hours.
-        And then came the <i>“streak”</i> feature. You know, when you have to <b>send videos to someone daily to keep that little fire going</b>. It’s fun, it’s challenging and can also be a little pressuring. The moment you forget to <i>“ignite”</i> that fire, it’s like a friendship over case between you and your friend.
+        Thinking about it now, I honestly can’t believe I’m still this attached to the app. Back in the day, I had this weird <b>love-hate relationship</b> with the app right after it replaced Musical.ly. Remember Musical.ly? the app that basically became TikTok overnight. According to the rumors, TikTok bought Musical.ly and rebranded it, and naturally, a lot of Musical.ly users were offended. I get it, change is annoying when you love something the way it was. But over time, people just accepted it. Like, did they really have a choice? Not really. The important thing is <b>TikTok remained fun</b>, so fun that some of us <b>sacrifice sleep</b> just to scroll for a few minutes, which then turns into hours.
+        And then came the <i>“streak”</i> feature. You know, when you have to send videos to someone daily to keep that little fire going. It’s fun, it’s challenging and can also be a little pressuring. The moment you forget to <i>“ignite”</i> that fire, it’s like a friendship over case between you and your friend.
         It’s wild to think how an app can be so tiny but take over so much of your time. But I guess that’s the magic of TikTok, it’s <b>addictive, engaging</b>, and somehow becomes part of your daily routine without you even realizing it.
       </p>
 
@@ -130,3 +130,4 @@
   </main>
 </body>
 </html>
+
