--- a/blog2.html
+++ b/blog2.html
@@ -117,17 +117,18 @@
 
       <h5 class="title2">Addicted & Annoyed</h5>
       <p class="bio">
-        Thinking about it now, I honestly can’t believe I’m still this attached to the app. Back in the day, I had this weird <b>love-hate relationship</b> with the app right after it replaced Musical.ly. Remember Musical.ly? the app that basically became TikTok overnight. According to the rumors, TikTok bought Musical.ly and rebranded it, and naturally, a lot of Musical.ly users were offended. I get it, change is annoying when you love something the way it was. But over time, people just accepted it. Like, did they really have a choice? Not really. The important thing is <b>TikTok remained fun</b>, so fun that some of us <b>sacrifice sleep</b> just to scroll for a few minutes, which then turns into hours.
+        Thinking about it now, I honestly can’t believe I’m still this attached to the app. Back in the day, I had this weird <b>love-hate relationship</b> with the app right after it replaced Musical.ly. Remember Musical.ly? the app that basically became TikTok overnight. According to the rumors, <b>TikTok bought Musical.ly and rebranded it</b>, and naturally, a lot of Musical.ly users were offended. I get it, change is annoying when you love something the way it was. But over time, people just accepted it. Like, did they really have a choice? Not really. The important thing is <b>TikTok remained fun</b>, so fun that some of us sacrifice sleep just to scroll for a few minutes, which then turns into hours.
         And then came the <i>“streak”</i> feature. You know, when you have to send videos to someone daily to keep that little fire going. It’s fun, it’s challenging and can also be a little pressuring. The moment you forget to <i>“ignite”</i> that fire, it’s like a friendship over case between you and your friend.
-        It’s wild to think how an app can be so tiny but take over so much of your time. But I guess that’s the magic of TikTok, it’s <b>addictive, engaging</b>, and somehow becomes part of your daily routine without you even realizing it.
+        It’s wild to think how an app can be so tiny but take over so much of your time. But I guess that’s the magic of TikTok, it’s addictive, engaging, and somehow becomes part of your daily routine without you even realizing it.
       </p>
 
       <h6 class="title2">One Last Scroll</h6>
       <p class="bio">
-        At the end of the day, <b>TikTok is indeed hard to let go of</b>, especially when it has already become part of my daily routine. I’ve realized that while scrolling helps me relax, <b>too much of it takes away something important, my sleep</b>. My takeaway is simple, <b>enjoy the app, but don’t let it control the night!</b>
+        At the end of the day, <b>TikTok is indeed hard to let go of</b>, especially when it has already become part of my daily routine. I’ve realized that while scrolling helps me relax, too much of it takes away something important, my sleep. My takeaway is simple, <b>enjoy the app, but don’t let it control the night!</b>
       </p>
     </section>
   </main>
 </body>
 </html>
+
 
