--- a/blog2.html
+++ b/blog2.html
@@ -90,6 +90,24 @@
       border-radius: 3px;
       font-weight: 600;
     }
+
+    .home-btn{
+      display: inline-block;
+      text-decoration: none;
+      background: #740A03;
+      color: white;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 14px;
+      letter-spacing: 1px;
+      padding: 10px 18px;
+      border-radius: 6px;
+      margin-bottom: 25px;
+      font-weight: 600;
+    }
+
+    .home-btn:hover{
+      background: #5c0702;
+    }
   </style>
 </head>
 
@@ -98,6 +116,7 @@
 
   <main class="content-wrapper">
     <section class="content-box">
+      <a href="index.html" class="home-btn">HOME</a>
       <h1 class="title">
         A Doomscrolling<br>
         Confession
@@ -130,5 +149,6 @@
   </main>
 </body>
 </html>
+
 
 
