--- a/blog3.html
+++ b/blog3.html
@@ -62,6 +62,20 @@
       text-align: justify;
       color: #2b2b2b;
     }
+
+    .home-btn {
+      display: inline-block;
+      text-decoration: none;
+      background: #740A03;
+      color: white;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 14px;
+      letter-spacing: 1px;
+      padding: 10px 18px;
+      border-radius: 6px;
+      margin-bottom: 25px;
+      font-weight: 600;
+    }
   </style>
 </head>
 
@@ -91,9 +105,10 @@
       <p>
         Even so, I’m still hopeful. I’m learning to take things one day at a time, improving myself, and holding onto my very last spark, my passion for HTML and CSS, which I hope never fades. I want to finish what I’ve started, and after this course, I plan to explore other fields, continue learning new things, and maybe uncover a skill I didn’t know I had. I try to trust that it’s never too late to discover new potential, and I hold onto the hope that, little by little, I might regain the spark that once made me fall in love with programming.
       </p>
-
+      <a href="index.html" class="home-btn">HOME</a>
     </section>
   </div>
 
 </body>
 </html>
+
