--- a/blog1.html
+++ b/blog1.html
@@ -67,6 +67,20 @@
       margin-top: 30px;
       margin-bottom: 10px;
       color: #740A03;
+
+    .home-btn {
+      display: inline-block;
+      text-decoration: none;
+      background: #740A03;
+      color: white;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 14px;
+      letter-spacing: 1px;
+      padding: 10px 18px;
+      border-radius: 6px;
+      margin-bottom: 25px;
+      font-weight: 600;
+    }
     }
   </style>
 </head>
@@ -92,8 +106,9 @@
     <p class="bio">
       AI should be treated as a tool rather than a form of entertainment used without limits. While AI can be helpful and innovative, extensive use of AI is harming society. From my own experience, I’ve noticed how AI is often used to create silly or meaningless videos online. What many users fail to realize is that AI consumes real resources, such as water and energy, just to function. Using AI for unnecessary content may seem insignificant, but when done repeatedly by millions of people, the impact becomes much more serious. Be wise and use AI responsibly.
     </p>
-
+	<a href="index.html" class="home-btn">HOME</a>
   </div>
 
 </body>
 </html>
+
