--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     <header>
         <nav>
             <a href="#">Home</a>
-            <a href="#">About me</a>
+            <a href="aboutme.html">About me</a>
             <a href="projects.html">Projects</a>
             <a href="#">Contacts</a>
         </nav>
@@ -179,6 +179,7 @@
 </html>
 
 </html>
+
 
 
 
