--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             display: flex;
             flex-direction: column;
             min-height: 100vh;
+            text-align: justify;
         }
 
         header {
@@ -179,6 +180,7 @@
 </html>
 
 </html>
+
 
 
 
