--- a/aboutme.html
+++ b/aboutme.html
@@ -62,6 +62,20 @@
         padding: 30px 25px;
       }
     }
+
+    .home-btn {
+      display: inline-block;
+      text-decoration: none;
+      background: #740A03;
+      color: white;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 14px;
+      letter-spacing: 1px;
+      padding: 10px 18px;
+      border-radius: 6px;
+      margin-bottom: 25px;
+      font-weight: 600;
+    }
   </style>
 </head>
 <body>
@@ -136,8 +150,10 @@
         While I respect my past and what shaped me, I also look forward to what's next with excitement.<sup>14</sup>
         The journey continues, and I'm ready to face whatever comes with an open heart and mind.<sup>15</sup>
       </p>
+      <a href="index.html" class="home-btn">HOME</a>
     </div>
   </div>
 
 </body>
 </html>
+
