--- a/aboutme.html
+++ b/aboutme.html
@@ -10,6 +10,7 @@
       font-family: Georgia, "Times New Roman", serif;
       background-color: #f2f2f2;
       color: black;
+      text-align: justify;
     }
 
     .page {
@@ -156,4 +157,5 @@
 
 </body>
 </html>
+
 
