--- a/projects.html
+++ b/projects.html
@@ -133,7 +133,7 @@
   <header>
     <nav>
       <a href="index.html">Home</a>
-      <a href="#">About me</a>
+      <a href="aboutme.html">About me</a>
       <a href="projects.html">Projects</a>
       <a href="#">Contacts</a>
     </nav>
@@ -169,6 +169,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
