--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <footer>
         <div class="social-links">
             <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-            <a href="#"><i class="fa-brands fa-github"></i></a>
+            <a href="https://github.com/libutoncyrilmae-a11y"><i class="fa-brands fa-github"></i></a>
             <a href="#"><i class="fa-brands fa-instagram"></i></a>
             <a href="#"><i class="fa-regular fa-envelope"></i></a>
         </div>
@@ -179,6 +179,7 @@
 </html>
 
 </html>
+
 
 
 
