--- a/projects.html
+++ b/projects.html
@@ -161,7 +161,7 @@
   <footer>
     <div class="social-links">
       <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
-      <a href="#"><i class="fa-brands fa-github"></i></a>
+      <a href="https://github.com/libutoncyrilmae-a11y"><i class="fa-brands fa-github"></i></a>
       <a href="#"><i class="fa-brands fa-instagram"></i></a>
       <a href="#"><i class="fa-regular fa-envelope"></i></a>
     </div>
@@ -169,6 +169,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
