--- a/aboutme.html
+++ b/aboutme.html
@@ -38,18 +38,12 @@
     }
 
     .photo-box {
-      background: #eee;
-      border: 2px dashed #9e4244;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      color: #740A03;
-      font-family: Arial, Helvetica, sans-serif;
-      font-weight: 600;
-      letter-spacing: 1px;
+      border: 2px solid #9e4244;
       border-radius: 10px;
       overflow: hidden;
-      text-align: center;
+      object-fit: cover;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.08);
+      background: #eee;
     }
 
     .photo-rect {
@@ -134,13 +128,8 @@
     <h1>Going Through What I Went Through</h1>
 
     <div class="photo-row">
-      <div class="photo-box photo-rect">
-        PIC 1 (RECTANGULAR)
-      </div>
-
-      <div class="photo-box photo-square">
-        PIC 2 (SQUARE)
-      </div>
+      <img src="pic1.jpeg" alt="Photo 1" class="photo-box photo-rect">
+      <img src="pic2.jpeg" alt="Photo 2" class="photo-box photo-square">
     </div>
 
     <div class="section">
