--- a/aboutme.html
+++ b/aboutme.html
@@ -5,6 +5,10 @@
   <title>AboutMe</title>
 
   <style>
+    html {
+      scroll-behavior: smooth;
+    }
+
     body {
       margin: 0;
       font-family: Georgia, "Times New Roman", serif;
@@ -25,8 +29,32 @@
       text-align: center;
       color: #740A03;
       letter-spacing: 1px;
-      margin-bottom: 40px;
+      margin-bottom: 20px;
       text-transform: uppercase;
+    }
+
+    /* BUTTON NAVIGATION */
+    .nav-buttons {
+      text-align: center;
+      margin-bottom: 40px;
+    }
+
+    .nav-buttons a {
+      display: inline-block;
+      margin: 6px;
+      padding: 10px 18px;
+      background-color: #9e4244;
+      color: white;
+      text-decoration: none;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 14px;
+      letter-spacing: 1px;
+      border-radius: 6px;
+      font-weight: 600;
+    }
+
+    .nav-buttons a:hover {
+      opacity: 0.9;
     }
 
     .section {
@@ -124,7 +152,14 @@
   <div class="page">
     <h1>Going Through What I Went Through</h1>
 
-    <div class="section">
+    <!-- NAVIGATION BUTTONS -->
+    <div class="nav-buttons">
+      <a href="#childhood">Childhood Years</a>
+      <a href="#teenage">Teenage Years</a>
+      <a href="#college">College Years</a>
+    </div>
+
+    <div class="section" id="childhood">
       <div class="section-title">Childhood Years</div>
       <div class="divider"></div>
 
@@ -158,7 +193,7 @@
       </div>
     </div>
 
-    <div class="section">
+    <div class="section" id="teenage">
       <div class="section-title">Teenage Years</div>
       <div class="divider"></div>
       <p>
@@ -183,7 +218,7 @@
       </p>
     </div>
 
-    <div class="section">
+    <div class="section" id="college">
       <div class="section-title">College Years</div>
       <div class="divider"></div>
       <p>
@@ -210,4 +245,6 @@
   </div>
 
 </body>
-</html> 
+</html>
+
+
