--- a/aboutme.html
+++ b/aboutme.html
@@ -164,7 +164,10 @@
       <div class="divider"></div>
 
       <div class="content-with-photos">
-        <img src="pic1.jpeg" alt="Photo 1" class="img-rect">
+        <a href="pic1.jpeg" target="images">
+          <img src="pic1.jpeg" alt="Photo 1" class="img-rect">  
+        </a>
+        
 
         <p>
           If you had told me at 13 where I would be today, I might have found it hard to believe.<sup>1</sup>
@@ -178,7 +181,10 @@
           But that independence became a strong part of me.<sup>9</sup>
         </p>
 
-        <img src="pic2.jpeg" alt="Photo 2" class="img-square">
+        <a href="pic2.jpeg" target="images">
+          <img src="pic2.jpeg" alt="Photo 2" class="img-square">
+        </a>
+        
 
         <p>
           Over time, I started to understand why my life had been like this, and even though it wasn't simple, it taught me important lessons about staying strong.<sup>10</sup>
@@ -246,5 +252,6 @@
 
 </body>
 </html>
+
 
 
