--- a/projects.html
+++ b/projects.html
@@ -162,13 +162,14 @@
     <div class="social-links">
       <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
       <a href="https://github.com/libutoncyrilmae-a11y"><i class="fa-brands fa-github"></i></a>
-      <a href="#"><i class="fa-brands fa-instagram"></i></a>
-      <a href="#"><i class="fa-regular fa-envelope"></i></a>
+      <a href="https://www.instagram.com/cy.cyreal/"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://mailto:123cyrilmae@gmail.com/"><i class="fa-regular fa-envelope"></i></a>
     </div>
     <p>&copy; Cyril Libuton</p>
   </footer>
 </body>
 </html>
+
 
 
 
