--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     <main class="hero">
         <div class="hero-text">
             <h1>Hi, I’m Cy!</h1>
-            <p class="subtitle">welcome . . .</p>
+            <p class="subtitle">welcome to my website</p>
             <a href="#" class="button">Learn More</a>
         </div>
 
@@ -180,4 +180,5 @@
 
 </body>
 </html>
+
 
